temp fix for popover content not showing up in certain scenarios

--- a/zuul-web/src/main/webapp/assets/css/main.css
+++ b/zuul-web/src/main/webapp/assets/css/main.css
@@ -3,6 +3,13 @@ body {
     padding-bottom: 40px;
 }
 
+/* ------------ Bootstrap Fixes ------------------- */
+
+.popover-content {
+    font-size: 14px !important;
+}
+
+
 /* ------------ Start Bootstrap Extensions ------------------- */
 input.error {
     color: #b94a48;
